# pantau

./: .gitignore  PRD.md  VALIDATION.md  ecosystem.config.js
api/: .env.example  drizzle.config.ts  package-lock.json  package.json
api/src/: alert.ts  checker.ts  db.ts  index.ts  schema.ts
api/src/middleware/: auth.ts
api/src/routes/: auth.ts  endpoints.ts  heartbeats.ts  ingest.ts  logs.ts
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css  useTheme.ts
dashboard/src/pages/: Dashboard.tsx  LogCharts.tsx  LogViewer.tsx  Login.tsx  Register.tsx
mcp/: README.md  main.py  pyproject.toml
sdk-node/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk-node/src/: index.ts  path.test.ts  redact.test.ts  redact.ts  test.ts
sdk-python/: README.md  pyproject.toml
sdk-python/pantau/: __init__.py  client.py  path.py  redact.py
sdk-python/tests/: test_path.py  test_redact.py
