[project]
name = "pantau-mcp"
version = "0.1.0"
description = "MCP server for Pantau monitoring — expose endpoints, heartbeats, logs, and stats to AI assistants"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
pantau-mcp = "main:main"

[tool.setuptools]
py-modules = ["main"]
